service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hbolajraf-webapp-service  # Name of the service
spec:
  type: NodePort                 
  selector:
    app: hbolajraf-webapp        # Targets pods with the label `app: hbolajraf-webapp`
  ports:
  - protocol: TCP                
    port: 80                     # The port on which the service will be accessible
    targetPort: 8080             # The port on the pod that the service forwards traffic to
  type: ClusterIP                # Default type to expose the service within the cluster only
